--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 flask==2.0.1
-PyPDF2==3.0.1
-werkzeug==2.0.1
+pdfplumber==0.9.0
+spacy==3.5.3
+https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0.tar.gz
 gunicorn==20.1.0
 python-dotenv==0.19.0
+Werkzeug==2.0.1
