--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
 flask==2.0.1
 pdfplumber==0.9.0
-spacy==3.5.3
+numpy==1.21.6
+spacy==3.4.4
 gunicorn==20.1.0
 python-dotenv==0.19.0
 Werkzeug==2.0.1
+thinc==8.1.8
+scikit-learn==1.0.2
+setuptools>=65.5.1
+wheel>=0.38.0
