--- a/render.yaml
+++ b/render.yaml
@@ -3,20 +3,16 @@ services:
     name: resume-matcher
     env: python
     buildCommand: |
-      pip cache purge
-      pip install --upgrade pip setuptools wheel
-      pip install --no-cache-dir numpy==1.21.6
-      pip install --no-cache-dir -r requirements.txt
+      python -m pip install --upgrade pip
+      pip install --upgrade setuptools wheel
+      pip install -r requirements.txt
       python -m spacy download en_core_web_sm
     startCommand: gunicorn app:app -c gunicorn_config.py
     envVars:
       - key: PYTHON_VERSION
-        value: 3.9.16
+        value: 3.10.13
       - key: PYTHONUTF8
         value: "1"
-      - key: PIP_NO_BINARY
-        value: ":all:"
-      - key: PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION
-        value: "python"
+    healthCheckPath: /
     healthCheckPath: /
     autoDeploy: true
